--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     width: 60vw;
-    padding-left: 3vw;
+    
     background-color: var(--fourth);
     color: var(--third);
 }
@@ -71,6 +71,7 @@ h1 {
     font-weight: 500;
     width: 90%;
     font-size: 1.2rem;
+    padding-left: 3vw;
 }
 
 .remote-text {
@@ -79,22 +80,27 @@ h1 {
 }
 
 .form {
-    width: 90%;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding-left: 3vw;
+    padding-right: 3vw;
 }
 
 .form-title {
     width: 100%;
     font-size: 1.8rem;
-    font-weight: 500;
+    font-weight: bold;
+    padding-top: 1vh;
+    color: white;
 }
 
 label {
     color: white;
 }
-
+.form{
+    background-color: var(--fifth);
+}
 .form-input {
     display: flex;
     flex-direction: row;
@@ -134,6 +140,8 @@ button:hover {
     flex-direction: row;
     gap: 5px;
     width: 90%;
+    padding-left: 3vw;
+    padding-top: 1vh;
 }
 
 a {
